plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1' // Для создания fat JAR
    id 'com.diffplug.spotless' version '6.25.0' // Укажите последнюю версию
}

group 'kz.aday'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'org.telegram:telegrambots:6.9.0'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.12'
    implementation 'org.reflections:reflections:0.10.2'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

spotless {
    java {
        target 'src/**/*.java'

        licenseHeader '/* (C) 2024 Igibaev */'

        googleJavaFormat('1.19.2') // Обновлено до 1.19.2 (совместимо с Java 21)
        removeUnusedImports()

        importOrder()

        endWithNewline()
    }
}

application {
    mainClass = 'kz.aday.bot.TelegramFoodBotApplication' // Укажите ваш главный класс
}

shadowJar {
    archiveFileName = 'food_bot_telegram.jar' // Имя итогового JAR
    mergeServiceFiles()
}